# loser-bot

./: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
migrations/: 001_initial.sql  002_loser_counts.sql
src/: db.rs  loser_count.rs  main.rs
